fix alignment for solar eclipses

--- a/style/default.css
+++ b/style/default.css
@@ -597,7 +597,7 @@ input[type=date]::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
-#Solar Eclipses .leftaligned {
+#Solar\20 Eclipses > div.leftaligned {
     margin-top: 30px;
     margin-bottom: 60px;
     width: 80%;
